# End-to-End_ml_project

./: .ebignore  .gitignore  Dockerfile  Procfile  README.md  app.py  application.py  eb_last100_errors.txt  eb_logs.txt  pyproject.toml  requirements.txt
.ebextensions/: 01_cleanup.config  python.config
.github/workflows/: main.yaml
artifacts/: model.pkl  preprocessor.pkl
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
end_to_end_ml_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebook/: EDA_Student_performance.ipynb  MODEL_TRAINING.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py  utlis.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
templates/: home.html  index.html
